pyroscope (0.3.6) hardy; urgency=low

  * lstor: Added "-o" option to select output fields
  * rtcontrol: Print XMLRPC statistics when in verbose mode
  * rtcontrol: Added --custom KEY=VALUE option (set custom_KEY field)
  * rtcontrol: Added field "started" (time of first start)
  * rtcontrol: Added field "kind" as a taglist
  * rtcontrol: Added field "files" with a glob filter that matches any
    path in the filelist
  * rtcontrol: Added default output format "files"
  * rtxmlrpc: Added --repr option
  * Tagged filters now allow exact matching by adding a leading '=', 
    e.g. kind==mkv (only "mkv", nothing else)
  * File extension percentages are cached into the field "custom_kind"
  * Support for custom_1 to custom_5 (these are special in rTorrent)
  * Added [XMLRPC] section to "config.ini" so that any method name used
    internally can be mapped to ones different from rTorrent 0.8.6

 -- pyroscope <pyroscope.project@gmail.com>  Thu, 26 Aug 2010 01:31:01 +0200

pyroscope (0.3.5) hardy; urgency=low

  * rtcontrol: Added "tagged" field and "--tag" option to set them
  * rtcontrol: Added "views" field that uses the TaggedAsFilter for selection
  * rtcontrol: All named custom attributes are available as "custom_NAME"
  * rtcontrol: Added --column-headers option
  * Configurable output formats added ("rtcontrol -o format_name")
  * Added "--define KEY=VAL" to override configuration attributes, e.g.
    to connect to another rtorrent instance via "-D rtorrent_rc=..."
  * Output formatting: system field "now" and format spec ".iso" for dates
  * xmlrpc-c is now checked for 64 bit support when connecting

 -- pyroscope <pyroscope.project@gmail.com>  Fri, 20 Aug 2010 20:56:49 +0200

pyroscope (0.3.4) hardy; urgency=low

  * Note that some new features need special entries in .rtorrent.rc, so read
    http://code.google.com/p/pyroscope/wiki/UserConfiguration before updating
  * chtor: --comment, --bump-date, and --no-date added