@@ -38,7 +38,7 @@ custom_field_factories =
 
 [FORMATS]
 # Custom output formats
-completion = $(completed.raw.delta)13.13s $(is_open)4.4s $(up.sz)10s/s $(ratio.pc)5d$(pc)s $(alias)-8s $(kind_50)-4.4s  $(name)s
+completion = $(completed.raw.delta)13.13s $(leechtime)9.9s $(is_open)4.4s $(up.sz)10s/s $(ratio.pc)5d$(pc)s $(alias)-8s $(kind_50)-4.4s  $(name)s
 short      = $(completed)-16.16s $(size.sz)10s $(uploaded.sz)10s $(ratio.pc)5d$(pc)s $(alias)-8s $(name)s
 files      = $(is_active)-6s $(completed)s $(size.sz)s $(name)s {$(alias)s}
              $(files)s [$(custom_kind)s]\n
